<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">
    <item android:title="@string/content"
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"/>
    <item android:title="Setting">
        <menu>
            <item
                android:id="@+id/nav_language"
                android:title="@string/language"
                android:icon="@drawable/ic_language"/>
            <item android:id="@+id/nav_theme_toggle"
                android:title="@string/enable_dark_mode"
                android:icon="@drawable/ic_dark_mode"
                app:showAsAction="always" />
        </menu>
    </item>

    <item android:title="About this Application">
        <menu>
    <item android:id="@+id/nav_use"
        android:icon="@drawable/ic_about"
        android:title="@string/acknowledgements"/>
    <item android:id="@+id/nav_copyright"
        android:icon="@drawable/ic_copyright"
        android:title="@string/copyright"/>
    <item android:id="@+id/nav_about"
        android:icon="@drawable/ic_info"
        android:title="@string/about"/>
        </menu>
    </item>
</menu>